argo-rollouts/overlays/dev/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-argo-rollouts
  namespace: argo-rollouts
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["dev.audryus.arpa"]
  rules:
    - matches:
      - headers:
          - name: X-Forwarded-Proto
            value: http
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          port: 443
      backendRefs:
      - name: argo-rollouts-dashboard
        weight: 1
        port: 3100
    - backendRefs:
      - name: argo-rollouts-dashboard
        weight: 1
        port: 3100
